# AndroidVideoIO

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
examples/: CMakeLists.txt  android_videoio_demo.cpp
src/: AndroidVideoCapture.cpp  AndroidVideoCapture.h  AndroidVideoWriter.cpp  AndroidVideoWriter.h  CMakeLists.txt  android_videoio_version.h  android_videoio_version.h.in
